--- a/index.html
+++ b/index.html
@@ -310,15 +310,66 @@
                   <svg class="join-icon" width="20" height="20"><use href="./images/icons.svg#linkedin"></use> </svg></a></li>
       </ul>
     </div>
+    <div>
+      <form class="footer-form">
+        <strong>Подпишитесь на рассылку</strong>
+        <input class="form-distibution" type="text" placeholder="E-mail">
+        <button type="submit">Подписаться <svg class="footer-icon" width="18" height="18">
+            <use href="./images/icons.svg#send"></use>
+          </svg></button>
+        
+
+      </form>
+    </div>
     </div>
   </footer>
 
   <!-- Modal window -->
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
+      
       <button type="button" class="modal-btn" data-modal-close>
         <svg class="modal-btn-icon" width="18" height="18"><use href="./images/icons.svg#close"></use></svg>
       </button>
+      <form class="form">
+        <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
+        <div class="form-group">
+          <label class="form-label" for="user-name">Имя</label>
+          <input class="form-input" type="text" id="user-name">
+          <svg class="form-icon" width="18" height="18">
+            <use href="./images/icons.svg#person"></use>
+          </svg>
+        </div>
+
+        <div class="form-group">
+          <label class="form-label" for="user-phone">Телефон</label>
+          <input class="form-input" type="text" id="user-phone">
+          <svg class="form-icon" width="18" height="18">
+            <use href="./images/icons.svg#phone"></use>
+          </svg>
+        </div>
+
+        <div class="form-group">
+          <label class="form-label" for="user-mail">Почта</label>
+          <input class="form-input" type="text" id="user-mail">
+          <svg class="form-icon" width="18" height="18">
+            <use href="./images/icons.svg#mail"></use>
+          </svg>
+        </div>
+
+        <div class="form-group">
+          <label class="form-label" for="user-comment">Комментарий</label>
+          <textarea id="user-comment" cols="30" rows="10" placeholder="Введите текст"></textarea>
+        </div>
+
+        <div>
+          <label for=""></label>
+          <input type="checkbox">
+          <span>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></span>
+        </div>
+
+        <button type="submit">Отправить</button>
+      </form>
     </div>
   </div>
   <script src="./js/modal.js"></script>
