--- a/portfolio.html
+++ b/portfolio.html
@@ -372,6 +372,21 @@
             </li>
           </ul>
         </div>
+        <div>
+          <!-- Footer Subscribe -->
+          <form class="subscribe-form">
+            <p class="subscribe-title">Подпишитесь на рассылку</p>
+            <label class="subscribe-label-form">
+              <input class="subscribe-input" name="email" type="text" placeholder="E-mail" />
+              <button class="subscribe-btn" type="submit">
+                Подписаться
+                <svg class="subscribe-btn-icon" width="18" height="18">
+                  <use href="./images/icons.svg#send"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
