--- a/portfolio.html
+++ b/portfolio.html
@@ -375,16 +375,24 @@
         <div>
           <!-- Footer Subscribe -->
           <form class="subscribe-form">
-            <p class="subscribe-title">Подпишитесь на рассылку</p>
             <label class="subscribe-label-form">
-              <input class="subscribe-input" name="email" type="text" placeholder="E-mail" />
+              <span class="subscribe-title">Подпишитесь на рассылку</span>
+            </label>
+            <div class="subscribe">
+              <input
+                class="subscribe-input"
+                name="email"
+                type="text"
+                placeholder="E-mail"
+                required
+              />
               <button class="subscribe-btn" type="submit">
                 Подписаться
                 <svg class="subscribe-btn-icon" width="18" height="18">
                   <use href="./images/icons.svg#send"></use>
                 </svg>
               </button>
-            </label>
+            </div>
           </form>
         </div>
       </div>
