--- a/portfolio.html
+++ b/portfolio.html
@@ -347,25 +347,25 @@
           <p class="join-txt">присоединяйтесь</p>
           <ul class="join-list list">
             <li>
-              <a class="join-link link" href="" target="_blank" ref="noopener noreffener">
+              <a class="join-link link" href="" target="_blank" rel="noopener noreffener">
                 <svg class="join-icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
             <li>
-              <a class="join-link link" href="" target="_blank" ref="noopener noreffener">
+              <a class="join-link link" href="" target="_blank" rel="noopener noreffener">
                 <svg class="join-icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
             <li>
-              <a class="join-link link" href="" target="_blank" ref="noopener noreffener">
+              <a class="join-link link" href="" target="_blank" rel="noopener noreffener">
                 <svg class="join-icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
             <li>
-              <a class="join-link link" href="" target="_blank" ref="noopener noreffener">
+              <a class="join-link link" href="" target="_blank" rel="noopener noreffener">
                 <svg class="join-icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use></svg
               ></a>
@@ -375,9 +375,7 @@
         <div>
           <!-- Footer Subscribe -->
           <form class="subscribe-form">
-            <label class="subscribe-label-form">
-              <span class="subscribe-title">Подпишитесь на рассылку</span>
-            </label>
+            <label class="subscribe-label-form"> Подпишитесь на рассылку </label>
             <div class="subscribe">
               <input
                 class="subscribe-input"
